fix sonar issue